# KOSMO

./: .env.example  .gitignore  AGENT.md  ARQUITECTURA_FASES_NEGOCIO.md  DOCKER_LOCAL.md  ENV_VARIABLES_GUIDE.md  INFORME_DEVOPS_DOCKER.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  cc-sdd.txt  docker-compose.yml  kosmo-orq-agentics.md  kosmo-prompt-chaining.md  render.yaml  ulid-transform.md  vercel.json
backend/: .dockerignore  .env.example  .importlinter  Dockerfile  ExArq.md  README.md  alembic.ini  discovery-agents.md  entrypoint.sh  kosmo-agent.md  openapi.yaml  pyproject.toml  refinamientoDiscovery.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0001_users.py  0002_add_user_preferences.py  0002_audit_log.py  0002_pipeline_sdd.py  0003_projects.py  0003_replace_discovery_clean_with_md.py  0004_discovery.py  0004_remove_tree_columns_keep_md.py  0005_features.py  0006_requirements.py  5b5161b3a623_remove_raw_idea_from_pipeline_states.py  5f99c19a64e9_add_clean_document_columns.py  769f4fa2d80c_rename_discovery_documents_to_discovery.py  7e12875285c6_add_clean_document_columns.py  9313ffd42cf9_add_discovery_documents_table.py  afd0ad8dfb71_drop_pipeline_states.py  db75f0b14dc8_simplify_requirements_move_blob.py  e5e0bda961df_add_slug_to_projects.py  f2f6de23e76e_remove_feature_status.py
backend/app/: main.py
backend/docker/postgres/: init-extensions.sql
backend/postman/: KOSMO_API_v2.postman_collection.json  KOSMO_API_v3_Complete.postman_collection.json  KOSMO_AuthFlow.postman_collection.json  KOSMO_SDD_API.postman_collection.json  KOSMO_SDD_Pipeline.postman_collection.json  KOSMO_SDD_Pipeline_v2.postman_collection.json
backend/src/kosmo/: config.py
backend/src/kosmo/application/auth/: __init__.py  authorize.py  exchange.py  register.py  use_cases.py
backend/src/kosmo/application/discovery/: __init__.py  generate_discovery.py  get_discovery.py  refine_discovery.py  save_discovery.py
backend/src/kosmo/application/features/: __init__.py  apply_improvement.py  approve_feature.py  create_feature.py  delete_feature.py  generate_features.py  generate_requirements.py  get_requirements.py  get_requirements_document.py  improve_feature.py  list_features.py  regenerate_requirements.py  save_features.py  save_requirements_document.py  save_selected_suggestions.py  suggest_alternatives.py  suggest_features.py  suggest_from_idea.py  toggle_feature_status.py  update_requirements.py
backend/src/kosmo/application/memory/: inject_preferences.py  learn_from_correction.py
backend/src/kosmo/application/orchestration/: helpers.py  kosmo_graph.py  sdd_graph.py
backend/src/kosmo/application/pipeline/: __init__.py  advance_pipeline.py  execute_phase.py  get_pipeline_status.py  kosmo_agent.py
backend/src/kosmo/application/sdd/: canvas.py  (+8 more)
backend/src/kosmo/contracts/: __init__.py  telemetry.py
backend/static/: discovery-viewer.html
backend/tests/: conftest.py
backend/tests/e2e/: test_sdd_pipeline.py
backend/tests/integration/: test_auth_demo_router.py  test_auth_router.py
backend/tests/unit/: test_auth_use_cases.py  test_create_project.py  test_discovery_refine_mode.py  test_discovery_refine_validator.py  test_discovery_validator.py  test_document_converters.py  test_feature_use_cases.py  test_fernet_vault.py  test_generate_discovery.py  test_generate_ears.py  test_generate_features.py  test_get_discovery.py  test_get_project.py  test_get_requirements.py  test_health.py  test_identity_use_cases.py  test_kosmo_agent.py  test_list_projects.py  test_list_projects_router.py  test_mode_build_output.py  test_password_hasher.py  test_pkce.py  test_project_repository_contract.py  test_rate_limiter.py  test_save_discovery.py  test_save_requirements.py  test_save_selected_features.py  test_skill_registry.py  test_suggest_features.py  test_tool_registry.py
backend/tests/unit/contracts/: test_constitution_model.py  test_discovery_model.py  test_domain_model.py  test_ears_models.py  test_encrypted_api_key.py  test_pipeline_events.py  test_sdd_state.py  test_sdd_state_extended.py  test_spec_document.py  test_tasks_model.py
(+406 files in other folders)
